# uminho-miei

./: README.md
1/LI1/Bomberman/: README.md
1/LI2/Roguelike/: README.md
2/POO/: README.md
2/POO/JavaFactura/: LICENSE  README.md
2/POO/src/: AtividadesEconomicas.java  CCNullException.java  Contribuinte.java  ContribuinteIndTeste.java  ContribuinteIndividual.java  ContribuinteTeste.java  Educacao.java  FacturaNaoExisteException.java  GUI.java  Gerais.java  Habitacao.java  JavaFactura.java  JavaFacturaTestes.java  Lares.java  PassesTransportes.java  Saude.java  Veterinaria.java  javafactura.ser  rm_lixo.sh
2/SO/NPS/: LICENSE  Makefile  README.md
3.ano/MDIO/Work/: DadosGerados.xlsx  grafico_ex2.xlsx
3.ano/MNONL/Teste 1/: ficha1.m  ficha3.m  ficha4.m
3.ano/MNONL/Teste 2/: ficha7.m
3.ano/MNONL/Teste1/: ficha2.m  funcoes.m
3.ano/MNONL/Teste2/: ficha8.m  formulario2.m
3.ano/PL/: README.md
3/BD/EventsWorkbench/: README.md  v5.mwb
3/CC/: README.md
3/CG/: README.md
3/CG/CG/modelVisualization/: CMakeLists.txt  assembler.cpp  assembler.h  branch.cpp  branch.h  main.cpp
3/DSS/: README.md
3/MDIO/Work/: grafico_ex3.xlsx
3/MEIO/: MEIO.xlsm
3/MNONL/Teste1/: ficha5.m  ficha6.m  formulario.m
3/MNONL/Teste2/: ficha9.m
3/PL/: README.md
3/SD/CloudManagementServices/: README.md  pom.xml
4/ABD/: README.md
4/AEC/: README.md
4/AI/: .gitignore  README.md
4/AI/src/: MainContainer.java
4/BDNoSQL/: Gemfile  README.md  Rakefile  main.rb  mongo_queries.js  mongo_sakila.rb  mongo_schema.txt  neo4j_sakila.rb  queries.cypher  run.sh
4/BDNoSQL/neo4j_sakila/: actor.rb  address.rb  category.rb  city.rb  country.rb  customer.rb  film.rb  inventory.rb  language.rb  payment.rb  rental.rb  staff.rb  store.rb
4/BDNoSQL/oracle/: schema.sql
4/BDNoSQL/sql_sakila/: actor.rb  address.rb  category.rb  city.rb  country.rb  customer.rb  film.rb  film_actor.rb  film_category.rb  (+6 more)
4/CN/: README.md
4/ICD/: README.md
4/IPLN/: README.md
4/SA/: README.md
(+1997 files in other folders)
